--- a/nivelA/unidade1/Mixed Letters/index.html
+++ b/nivelA/unidade1/Mixed Letters/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Mixed Letters</title>
     <style>
-        /* Aplicação de Times New Roman e centralização dos elementos */
         body {
             font-family: 'Times New Roman', Times, serif;
             background-color: #ffebcd;
@@ -13,7 +12,7 @@
             padding: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center; /* Centraliza o conteúdo horizontalmente */
+            align-items: center;
         }
 
         h1 {
@@ -21,37 +20,6 @@
             color: #ff4500;
             font-size: 3rem;
             margin-bottom: 20px;
-        }
-
-        .form-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Centraliza o conteúdo horizontalmente */
-        }
-
-        .button {
-            padding: 15px 25px;
-            background-color: #ff6347;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            font-size: 1.5rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin: 5px; /* Espaçamento entre os botões */
-            text-align: center;
-        }
-
-        .button:hover {
-            background-color: #e55342;
-        }
-
-        #add-activity-btn {
-            background-color: #48d1cc;
-        }
-
-        #add-activity-btn:hover {
-            background-color: #40b4b0;
         }
 
         .activity-container {
@@ -105,26 +73,6 @@
             border-color: red;
         }
 
-        .delete-icon {
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            cursor: pointer;
-            background-color: #ff6347;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            font-size: 16px;
-            text-align: center;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        .delete-icon:hover {
-            background-color: #e55342;
-        }
-
         .word-container {
             display: flex;
             flex-direction: column;
@@ -147,7 +95,6 @@
             background-color: #28a428;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
 <button onclick="window.location.href='../index.html'" style="padding: 15px 25px; background-color: #ff6347; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
@@ -156,32 +103,23 @@
 
 <h1>Hannah Mixed Letters</h1>
 
-<div class="form-container">
-    <!-- Botão para adicionar atividade -->
-    <button class="button" id="add-activity-btn">Add Activity</button>
-</div>
-
-<!-- Contêiner onde as atividades serão exibidas -->
 <div id="activity-container" class="activity-container"></div>
 
 <script>
-    let activities = []; // Lista para armazenar as atividades criadas
+    let activities = [];
 
-    // Função para embaralhar a palavra
     function shuffleWord(word) {
         const shuffled = word.split('').sort(() => 0.5 - Math.random()).join('');
-        return shuffled !== word ? shuffled : shuffleWord(word); // Certificar que não retorne a mesma palavra
+        return shuffled !== word ? shuffled : shuffleWord(word);
     }
 
-    // Função para falar o texto
     function speakText(text) {
         const synth = window.speechSynthesis;
         const utterThis = new SpeechSynthesisUtterance(text);
-        utterThis.lang = 'en-US'; // Configurado para inglês dos Estados Unidos
+        utterThis.lang = 'en-US';
         synth.speak(utterThis);
     }
 
-    // Função para carregar palavras e imagens dinamicamente
     async function loadActivities() {
         try {
             const response = await fetch('data/words.txt');
@@ -199,34 +137,21 @@
         }
     }
 
-    // Função para criar uma nova atividade
     function createActivity(imageUrl, word) {
         const activityContainer = document.getElementById('activity-container');
         const activityDiv = document.createElement('div');
         activityDiv.classList.add('activity');
 
-        // Criar o ícone de delete "X"
-        const deleteButton = document.createElement('button');
-        deleteButton.classList.add('delete-icon');
-        deleteButton.innerText = 'X';
-        deleteButton.onclick = function() {
-            const activityIndex = activities.indexOf(activityDiv.activityData);
-            if (activityIndex > -1) {
-                activities.splice(activityIndex, 1); // Remover da lista de atividades
-            }
-            activityDiv.remove(); // Remover a atividade da tela
-        };
-        activityDiv.appendChild(deleteButton);
-
-        // Adicionar a imagem
         const imgElement = document.createElement('img');
         imgElement.src = imageUrl;
+        imgElement.onerror = function() {
+            console.error(`Erro ao carregar a imagem: ${imageUrl}`);
+        };
         activityDiv.appendChild(imgElement);
 
         const wordContainer = document.createElement('div');
         wordContainer.classList.add('word-container');
 
-        // Misturar as letras da palavra
         const shuffledWord = shuffleWord(word);
 
         const mixedLettersElement = document.createElement('div');
@@ -238,7 +163,6 @@
         });
         wordContainer.appendChild(mixedLettersElement);
 
-        // Criar campos de entrada para o aluno
         const inputContainer = document.createElement('div');
         shuffledWord.split('').forEach((_, index, array) => {
             const letterInput = document.createElement('input');
@@ -247,7 +171,7 @@
 
             letterInput.addEventListener('input', function() {
                 if (letterInput.value.length === 1 && index < array.length - 1) {
-                    inputContainer.children[index + 1].focus(); // Focar no próximo campo
+                    inputContainer.children[index + 1].focus();
                 }
             });
 
@@ -256,7 +180,6 @@
 
         wordContainer.appendChild(inputContainer);
 
-        // Botão para checar a resposta
         const checkAnswerBtn = document.createElement('button');
         checkAnswerBtn.classList.add('check-answer-btn');
         checkAnswerBtn.innerText = 'Check Answer';
@@ -272,7 +195,7 @@
                     input.classList.add('correct');
                     input.classList.remove('incorrect');
                 });
-                speakText(word);  // Ler a palavra correta se o aluno acertar
+                speakText(word);
             } else {
                 letterInputs.forEach(input => {
                     input.classList.add('incorrect');
@@ -286,16 +209,9 @@
         activityDiv.appendChild(wordContainer);
         activityContainer.appendChild(activityDiv);
 
-        // Guardar a atividade
-        const activityData = { word, shuffledWord, imageDataURL: imageUrl };
-        activityDiv.activityData = activityData;
-        activities.push(activityData); // Adicionar à lista de atividades
-
-        // Rolar a página automaticamente para o final após adicionar a atividade
         activityDiv.scrollIntoView({ behavior: 'smooth' });
     }
 
-    // Carregar atividades automaticamente ao carregar a página
     document.addEventListener('DOMContentLoaded', loadActivities);
 
 </script>
