atualizações na escrita

--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -96,7 +96,6 @@
 
 <h1>Hannah Missing Word</h1>
 
-<!-- Contêiner onde as atividades serão exibidas -->
 <div id="activity-container" class="activity-container"></div>
 
 <script>
@@ -148,6 +147,7 @@
         missingWordElement.classList.add('missing-word');
 
         // Criar campos de entrada para o aluno
+        const letterInputs = [];
         word.split('').forEach((letter, index) => {
             const letterInput = document.createElement('input');
             letterInput.classList.add('missing-letter-input');
@@ -157,6 +157,10 @@
                 if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
                     letterInput.classList.add('correct');
                     letterInput.classList.remove('incorrect');
+
+                    if (index < word.length - 1) {
+                        letterInputs[index + 1].focus(); // Mover para o próximo campo
+                    }
 
                     const animationElement = document.createElement('div');
                     animationElement.classList.add('letter-animation');
@@ -169,13 +173,20 @@
                         animationElement.remove();
                     }, 1000);
 
-                    speakText(letter);
+                    // Verificar se a palavra está completa
+                    const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
+                    if (userWord === word.toUpperCase()) {
+                        speakText(word);  // Ler a palavra completa se o aluno acertar
+                    } else {
+                        speakText(letter);
+                    }
                 } else {
                     letterInput.classList.add('incorrect');
                     letterInput.classList.remove('correct');
                 }
             });
 
+            letterInputs.push(letterInput);
             missingWordElement.appendChild(letterInput);
         });
 
