--- a/nivelA/unidade1/Missing Letter/index.html
+++ b/nivelA/unidade1/Missing Letter/index.html
@@ -3,23 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah Missing Word</title>
+    <title>Hannah Missing Letter</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             background-color: #ffebcd;
             margin: 0;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
+
         h1 {
             text-align: center;
             color: #ff4500;
             font-size: 3rem;
             margin-bottom: 20px;
+            text-shadow: 2px 2px #ffd700;
         }
+
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .input-field {
+            display: block;
+            margin-bottom: 15px;
+            font-size: 1.5rem;
+            color: #8b4513;
+            text-align: left;
+            width: 100%;
+        }
+
+        input[type="text"], input[type="file"], input[type="checkbox"] {
+            padding: 10px;
+            font-size: 1.2rem;
+            border: 2px solid #8b4513;
+            border-radius: 10px;
+            width: 100%;
+            max-width: 300px;
+        }
+
+        .checkbox-container {
+            display: flex;
+            align-items: center;
+            font-size: 1.5rem;
+            color: #8b4513;
+            margin-bottom: 15px;
+            text-align: left;
+            width: 100%;
+        }
+
+        .checkbox-container input {
+            margin-right: 10px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 300px;
+        }
+
+        .button {
+            padding: 15px 25px;
+            background-color: #ff6347;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #e55342;
+        }
+
+        #add-activity-btn {
+            background-color: #48d1cc;
+        }
+
+        #add-activity-btn:hover {
+            background-color: #40b4b0;
+        }
+
+        #generate-pdf-btn {
+            background-color: #ffd700;
+            color: black;
+        }
+
+        #generate-pdf-btn:hover {
+            background-color: #ffcc00;
+        }
+
         .activity-container {
             margin-top: 20px;
+            width: 100%;
+            max-width: 1000px; /* Define um limite máximo para a largura */
         }
+
         .activity {
             display: flex;
             align-items: center;
@@ -30,23 +118,49 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
             margin-bottom: 30px;
             overflow: hidden;
+            width: 100%; /* Ocupar toda a largura disponível */
         }
+
         .activity img {
             max-width: 150px;
             max-height: 150px;
             border-radius: 12px;
             margin-right: 20px;
         }
+
         .missing-word {
             font-size: 36px;
             font-weight: bold;
             color: #ff4500;
+            text-shadow: 1px 1px #8b4513;
         }
+
         .full-word {
             font-size: 24px;
             margin-top: 10px;
             color: #8b4513;
         }
+
+        .delete-icon {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            cursor: pointer;
+            background-color: #ff6347;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            font-size: 16px;
+            text-align: center;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        .delete-icon:hover {
+            background-color: #e55342;
+        }
+
         .missing-letter-input {
             width: 40px;
             font-size: 36px;
@@ -55,17 +169,21 @@
             margin-right: 10px;
             border: 2px solid black;
         }
+
         .correct {
             border-color: blue;
         }
+
         .incorrect {
             border-color: red;
         }
+
         .word-container {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
+
         .letter-animation {
             font-size: 80px;
             color: #32CD32;
@@ -76,6 +194,7 @@
             animation: grow-shrink 1s ease-in-out;
             display: none;
         }
+
         @keyframes grow-shrink {
             0% {
                 transform: translate(-50%, -50%) scale(0);
@@ -88,118 +207,237 @@
             }
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 15px 25px; background-color: #ff6347; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
-    Back
-</button>
+    <button onclick="window.location.href='../index.html'" style="padding: 15px 25px; background-color: #ff6347; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
+        Back
+    </button>
 
-<h1>Hannah Missing Word</h1>
+    <h1>Hannah Missing Letter</h1>
 
-<div id="activity-container" class="activity-container"></div>
+    <div class="form-container">
+        <!-- Upload de Imagem -->
+        <label class="input-field">Upload Image (Optional): 
+            <input type="file" id="image-upload" accept="image/*">
+        </label>
 
-<script>
-    let activities = []; // Lista para armazenar as atividades criadas
+        <!-- Inserção de Palavra -->
+        <label class="input-field">Associated Word:
+            <input type="text" id="word-input" placeholder="Enter the word here">
+        </label>
 
-    function speakText(text) {
-        const synth = window.speechSynthesis;
-        const utterThis = new SpeechSynthesisUtterance(text);
-        utterThis.lang = 'en-US';
-        synth.speak(utterThis);
-    }
+        <!-- Checkbox para ocultar palavra -->
+        <div class="checkbox-container">
+            <input type="checkbox" id="hide-word">
+            <label for="hide-word">Hide full word</label>
+        </div>
 
-    // Função para carregar palavras e imagens dinamicamente
-    async function loadActivities() {
-        try {
-            const response = await fetch('data/words.txt');
-            const text = await response.text();
-            const lines = text.trim().split('\n');
+        <!-- Botões para adicionar atividade e gerar PDF -->
+        <div class="button-container">
+            <button class="button" id="add-activity-btn">Add Activity</button>
+            <button class="button" id="generate-pdf-btn">Generate PDF</button>
+        </div>
+    </div>
 
-            for (const line of lines) {
-                const [imageName, word] = line.split(':');
-                const imageUrl = `data/imagens/${imageName}`;
-                
-                createActivity(imageUrl, word);
-            }
-        } catch (error) {
-            console.error('Erro ao carregar palavras e imagens:', error);
+    <!-- Contêiner onde as atividades serão exibidas -->
+    <div id="activity-container" class="activity-container"></div>
+
+    <script>
+        let activities = []; // Lista para armazenar as atividades criadas
+
+        function loadImageAsBase64(imageFile) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onload = function(event) {
+                    resolve(event.target.result); // Retornar imagem base64
+                };
+                reader.onerror = function() {
+                    reject('Error loading image.');
+                };
+                reader.readAsDataURL(imageFile); // Ler imagem
+            });
         }
-    }
 
-    // Função para criar uma nova atividade
-    function createActivity(imageUrl, word) {
-        const activityContainer = document.getElementById('activity-container');
-        const activityDiv = document.createElement('div');
-        activityDiv.classList.add('activity');
+        function speakText(text) {
+            const synth = window.speechSynthesis;
+            const utterThis = new SpeechSynthesisUtterance(text);
+            utterThis.lang = 'en-US'; // Define o idioma para inglês dos Estados Unidos
+            synth.speak(utterThis);
+        }
 
-        // Adicionar a imagem
-        const imgElement = document.createElement('img');
-        imgElement.src = imageUrl;
-        imgElement.onerror = function() {
-            console.error(`Erro ao carregar a imagem: ${imageUrl}`);
-        };
-        activityDiv.appendChild(imgElement);
+        document.getElementById('add-activity-btn').addEventListener('click', async function() {
+            const word = document.getElementById('word-input').value;
+            const hideWord = document.getElementById('hide-word').checked;
 
-        const wordContainer = document.createElement('div');
-        wordContainer.classList.add('word-container');
+            const imageInput = document.getElementById('image-upload');
+            const imageFile = imageInput.files[0];
 
-        const missingWordElement = document.createElement('div');
-        missingWordElement.classList.add('missing-word');
+            let imageDataURL = null;
+            if (imageFile) {
+                imageDataURL = await loadImageAsBase64(imageFile);
+            }
 
-        // Criar campos de entrada para o aluno
-        const letterInputs = [];
-        word.split('').forEach((letter, index) => {
-            const letterInput = document.createElement('input');
-            letterInput.classList.add('missing-letter-input');
-            letterInput.maxLength = 1;
+            const activityContainer = document.getElementById('activity-container');
+            const activityDiv = document.createElement('div');
+            activityDiv.classList.add('activity');
 
-            letterInput.addEventListener('input', function() {
-                if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
-                    letterInput.classList.add('correct');
-                    letterInput.classList.remove('incorrect');
+            // Criar o ícone de delete "X"
+            const deleteButton = document.createElement('button');
+            deleteButton.classList.add('delete-icon');
+            deleteButton.innerText = 'X';
+            deleteButton.onclick = function() {
+                const index = activities.indexOf(activity);
+                if (index > -1) {
+                    activities.splice(index, 1); // Remove a atividade da lista
+                }
+                activityDiv.remove(); // Remover a atividade da tela
+            };
+            activityDiv.appendChild(deleteButton);
 
-                    if (index < word.length - 1) {
-                        letterInputs[index + 1].focus(); // Mover para o próximo campo
-                    }
+            const imageContainer = document.createElement('div');
+            if (imageFile) {
+                const imgElement = document.createElement('img');
+                imgElement.src = URL.createObjectURL(imageFile);
+                imageContainer.appendChild(imgElement);
+            } else {
+                imageContainer.classList.add('image-placeholder');
+            }
+            activityDiv.appendChild(imageContainer);
 
-                    const animationElement = document.createElement('div');
-                    animationElement.classList.add('letter-animation');
-                    animationElement.innerText = letter.toUpperCase();
-                    activityDiv.appendChild(animationElement);
-                    animationElement.style.display = 'block';
+            const wordContainer = document.createElement('div');
+            wordContainer.classList.add('word-container');
 
+            const missingWordElement = document.createElement('div');
+            missingWordElement.classList.add('missing-word');
+
+            const missingLetterInput = document.createElement('input');
+            missingLetterInput.classList.add('missing-letter-input');
+            missingLetterInput.maxLength = 1;
+
+            // Adicionar animação para a letra correta
+            const letterAnimation = document.createElement('div');
+            letterAnimation.classList.add('letter-animation');
+            letterAnimation.innerText = word.charAt(0);
+            activityDiv.appendChild(letterAnimation);
+
+            missingLetterInput.addEventListener('input', function() {
+                if (missingLetterInput.value.toUpperCase() === word.charAt(0).toUpperCase()) {
+                    missingLetterInput.classList.add('correct');
+                    missingLetterInput.classList.remove('incorrect');
+
+                    // Exibir animação
+                    letterAnimation.style.display = 'block';
+                    letterAnimation.classList.add('animate');
+                    
+                    // Falar a letra e a palavra completa
+                    speakText(missingLetterInput.value.toUpperCase());
                     setTimeout(() => {
-                        animationElement.style.display = 'none';
-                        animationElement.remove();
-                    }, 1000);
-
-                    // Verificar se a palavra está completa
-                    const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
-                    if (userWord === word.toUpperCase()) {
-                        speakText(word);  // Ler a palavra completa se o aluno acertar
-                    } else {
-                        speakText(letter);
-                    }
+                        speakText(word);
+                    }, 1000); // Aguardar 1 segundo antes de falar a palavra completa
                 } else {
-                    letterInput.classList.add('incorrect');
-                    letterInput.classList.remove('correct');
+                    missingLetterInput.classList.add('incorrect');
+                    missingLetterInput.classList.remove('correct');
                 }
             });
 
-            letterInputs.push(letterInput);
-            missingWordElement.appendChild(letterInput);
+            missingWordElement.appendChild(missingLetterInput);
+
+            const remainingWord = document.createElement('span');
+            remainingWord.innerText = word.substring(1);
+            missingWordElement.appendChild(remainingWord);
+            wordContainer.appendChild(missingWordElement);
+
+            if (!hideWord) {
+                const fullWordElement = document.createElement('span');
+                fullWordElement.classList.add('full-word');
+                fullWordElement.innerText = word;
+                wordContainer.appendChild(fullWordElement);
+            }
+
+            activityDiv.appendChild(wordContainer);
+            activityContainer.appendChild(activityDiv);
+
+            const activity = { word, hideWord, imageDataURL };
+            activities.push(activity);
+
+            // Rolagem automática para o fim da página
+            activityDiv.scrollIntoView({ behavior: 'smooth' });
+
+            // Limpar os campos após adicionar a atividade
+            document.getElementById('word-input').value = '';
+            document.getElementById('image-upload').value = '';
+            document.getElementById('hide-word').checked = false;
         });
 
-        wordContainer.appendChild(missingWordElement);
+        document.getElementById('generate-pdf-btn').addEventListener('click', async function() {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
 
-        activityDiv.appendChild(wordContainer);
-        activityContainer.appendChild(activityDiv);
-    }
+            const logoPath = 'Logo.png';
+            const logoLoaded = new Promise((resolve, reject) => {
+                const img = new Image();
+                img.src = logoPath;
+                img.onload = function() {
+                    resolve(img);
+                };
+                img.onerror = function() {
+                    reject('Error loading logo.');
+                };
+            });
 
-    // Carregar atividades automaticamente ao carregar a página
-    document.addEventListener('DOMContentLoaded', loadActivities);
+            const logoImg = await logoLoaded;
 
-</script>
+            doc.addImage(logoImg, 'PNG', 10, 5, 20, 20);
+            doc.setFontSize(22);
+            doc.text('Hannah Missing Letter', 40, 20);
 
+            doc.setFontSize(14);
+            doc.text('Name: ____________________________________  Date: __________', 10, 35);
+
+            let yOffset = 45;
+            const column1X = 10;
+            const column2X = 110;
+            let currentX = column1X;
+            let pageHeight = doc.internal.pageSize.height;
+
+            const checkAddPage = (doc, yOffset) => {
+                if (yOffset > pageHeight - 50) {
+                    doc.addPage();
+                    yOffset = 20;
+                    currentX = column1X;
+                }
+                return yOffset;
+            };
+
+            const pdfPromises = activities.map(async (activity, index) => {
+                if (activity.imageDataURL) {
+                    doc.addImage(activity.imageDataURL, 'PNG', currentX, yOffset, 40, 40);
+                }
+
+                doc.setFontSize(24);
+                const missingWordText = "_ " + activity.word.substring(1);
+                doc.text(missingWordText, currentX + 50, yOffset + 20);
+
+                if (!activity.hideWord) {
+                    doc.setFontSize(14);
+                    doc.text(activity.word, currentX + 50, yOffset + 35);
+                }
+
+                if (currentX === column1X) {
+                    currentX = column2X;
+                } else {
+                    currentX = column1X;
+                    yOffset += 60;
+                }
+
+                yOffset = checkAddPage(doc, yOffset);
+            });
+
+            await Promise.all(pdfPromises);
+
+            doc.save('hannah-missing-letter.pdf');
+        });
+    </script>
 </body>
 </html>
