--- a/nivelA/unidade1/index.html
+++ b/nivelA/unidade1/index.html
@@ -161,6 +161,7 @@
         <a href="../unidade1/Mixed Letters/index.html"><img src="../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>
         <a href="../unidade1/Grammar2/index.html"><img src="../../imagens/botoes/grammar2_button.png" alt="Grammar2"></a>
         <a href="../unidade1/Missing Word/index.html"><img src="../../imagens/botoes/missing_word_button.png" alt="Missing Word"></a>
+        <a href="../unidade1/Mixed Letters FIXO/index.html"><img src="../../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters FIXO"></a>
     </div>
 
     <!-- Div onde o texto do arquivo será carregado -->
