--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Verb "To Be" - Noah's Ark</title>
+    <title>The Verb "To Be" - Study with Noah's Ark</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,7 +13,7 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 100%;
+            max-width: 800px;
             margin: auto;
             background: white;
             padding: 20px;
@@ -23,44 +23,31 @@
         h1 {
             text-align: center;
             color: #333;
-            font-size: 1.5rem;
         }
         h2 {
-            background-color: #007bff;
+            background-color: #ff6600;
             color: white;
             padding: 10px;
             border-radius: 4px;
-            font-size: 1.25rem;
         }
         .section {
-            background-color: #cce5ff;
+            background-color: #ffcc99;
             margin-bottom: 20px;
             padding: 15px;
             border-radius: 5px;
         }
-        .section p {
-            margin: 0;
-            padding: 5px 0;
-        }
-        .section input[type="text"] {
+        .line {
+            display: block;
             width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            background-color: #f4f4f4;
-            cursor: not-allowed;
-        }
-        .section input[readonly] {
-            background-color: #f4f4f4;
-            color: #000;
+            height: 1.5em;
+            border-bottom: 2px solid black;
+            margin-bottom: 15px;
         }
         .btn-download {
             display: block;
             width: 100%;
             padding: 10px;
-            background-color: #0056b3;
+            background-color: #ff6600;
             color: white;
             text-align: center;
             text-decoration: none;
@@ -69,148 +56,243 @@
             cursor: pointer;
         }
         .btn-download:hover {
-            background-color: #004085;
+            background-color: #cc5200;
         }
         .image-container {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 15px;
             justify-content: center;
             margin-bottom: 20px;
         }
 
         .image-container img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
+            max-width: 100px;
+            margin: auto;
         }
 
-        @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-            }
-
-            h1 {
-                font-size: 1.25rem;
-            }
-
-            h2 {
-                font-size: 1.1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
+        @media screen and (max-width: 600px) {
+            .section {
                 padding: 10px;
             }
-
-            h1 {
-                font-size: 1rem;
-            }
-
             h2 {
-                font-size: 1rem;
-            }
-
-            .btn-download {
-                font-size: 0.9rem;
                 padding: 8px;
             }
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script>
         function generatePDF() {
             const { jsPDF } = window.jspdf;
-
             const doc = new jsPDF();
-            const container = document.querySelector('.container');
 
-            html2canvas(container).then(canvas => {
-                const imgData = canvas.toDataURL('image/png');
-                const imgProps = doc.getImageProperties(imgData);
-                const pdfWidth = doc.internal.pageSize.getWidth();
-                const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+            doc.setFontSize(20);
+            doc.text('The Verb "To Be" - Study with Noah\'s Ark', 20, 20);
 
-                doc.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-                doc.save('Noah_Ark_To_Be_Lesson.pdf');
-            });
+            doc.setFontSize(12);
+            doc.text('1. Introduction to the Verb "To Be"', 20, 30);
+            doc.text('The verb "to be" is one of the most important verbs in English. It means "to exist" or "to be in a state."', 20, 35);
+            doc.text('Depending on the subject, the verb "to be" changes its form. Let\'s learn the forms of the verb "to be" in the present tense.', 20, 40);
+            doc.text('Forms of the Verb "To Be" in the Present Tense:', 20, 50);
+            doc.text('Subject           Verb "To Be"       Example', 20, 55);
+            doc.text('I                        am                     I am happy.', 20, 60);
+            doc.text('You                   are                     You are strong.', 20, 65);
+            doc.text('He/She/It          is                       He is brave.', 20, 70);
+            doc.text('We                     are                     We are safe.', 20, 75);
+            doc.text('You (plural)      are                     You are a family.', 20, 80);
+            doc.text('They                  are                     They are animals.', 20, 85);
+
+            doc.text('2. Examples from the Story of Noah', 20, 95);
+            doc.text('Let\'s see how the verb "to be" is used in the story of Noah.', 20, 100);
+            doc.text('I am Noah.', 20, 105);
+            doc.text('God is good.', 20, 110);
+            doc.text('The ark is big.', 20, 115);
+            doc.text('We are safe in the ark.', 20, 120);
+            doc.text('The animals are happy.', 20, 125);
+            doc.text('You are strong, Noah.', 20, 130);
+
+            doc.text('3. Exercises', 20, 140);
+            doc.text('A. Fill in the blanks with "am," "is," or "are":', 20, 145);
+            doc.text('Noah ___ building the ark.', 20, 150);
+            doc.text('The animals ___ inside the ark.', 20, 155);
+            doc.text('I ___ happy to help Noah.', 20, 160);
+            doc.text('The sky ___ clear after the flood.', 20, 165);
+            doc.text('We ___ thankful to God.', 20, 170);
+
+            doc.text('B. Choose the correct word to complete the sentence:', 20, 180);
+            doc.text('God ___ (is/are) powerful.', 20, 185);
+            doc.text('The rainbow ___ (is/am) a promise from God.', 20, 190);
+            doc.text('Noah\'s family ___ (am/are) safe in the ark.', 20, 195);
+            doc.text('The dove ___ (is/are) bringing a message.', 20, 200);
+            doc.text('I ___ (am/are) happy to see the rainbow.', 20, 205);
+
+            doc.addPage();
+
+            doc.text('C. Write a sentence using "to be" based on the story:', 20, 20);
+            doc.text('______________ (Hint: Think about how Noah felt when he saw the rainbow.)', 20, 25);
+
+            doc.text('D. Correct the sentences below (if necessary):', 20, 35);
+            doc.text('Noah are building the ark.', 20, 40);
+            doc.text('The animals is safe in the ark.', 20, 45);
+            doc.text('I is happy to help.', 20, 50);
+            doc.text('The ark am strong.', 20, 55);
+            doc.text('They is a family.', 20, 60);
+
+            doc.text('4. Answer Key', 20, 70);
+            doc.text('A. Fill in the blanks with "am," "is," or "are":', 20, 75);
+            doc.text('Noah is building the ark.', 20, 80);
+            doc.text('The animals are inside the ark.', 20, 85);
+            doc.text('I am happy to help Noah.', 20, 90);
+            doc.text('The sky is clear after the flood.', 20, 95);
+            doc.text('We are thankful to God.', 20, 100);
+
+            doc.text('B. Choose the correct word to complete the sentence:', 20, 110);
+            doc.text('God is powerful.', 20, 115);
+            doc.text('The rainbow is a promise from God.', 20, 120);
+            doc.text('Noah\'s family are safe in the ark.', 20, 125);
+            doc.text('The dove is bringing a message.', 20, 130);
+            doc.text('I am happy to see the rainbow.', 20, 135);
+
+            doc.text('C. Write a sentence using "to be" based on the story:', 20, 145);
+            doc.text('Free answer: (Example: "I am happy to see the animals safe.")', 20, 150);
+
+            doc.text('D. Correct the sentences below (if necessary):', 20, 160);
+            doc.text('Noah is building the ark.', 20, 165);
+            doc.text('The animals are safe in the ark.', 20, 170);
+            doc.text('I am happy to help.', 20, 175);
+            doc.text('The ark is strong.', 20, 180);
+            doc.text('They are a family.', 20, 185);
+
+            doc.text('5. Conclusion', 20, 195);
+            doc.text('These exercises help children practice the verb "to be" while learning about the story of Noah.', 20, 200);
+            doc.text('This study combines grammar with storytelling, making learning more engaging and meaningful.', 20, 205);
+
+            doc.save('Verb_To_Be_Noah_Ark.pdf');
         }
     </script>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #0056b3; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
+<button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #ff6600; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
 
 <div class="container">
-    <h1>The Verb "To Be" - Noah's Ark</h1>
+    <h1>The Verb "To Be" - Study with Noah's Ark</h1>
     
-    <div class="image-container">
-        <img src="ark_image.png" alt="Noah's Ark">
+    <img src="foto4.png" alt="Noah's Ark" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
+
+    <div class="section">
+        <h2>1. Introduction to the Verb "To Be"</h2>
+        <p>The verb "to be" is one of the most important verbs in English. It means "to exist" or "to be in a state." Depending on the subject, the verb "to be" changes its form. Let's learn the forms of the verb "to be" in the present tense.</p>
+        <table>
+            <tr>
+                <th>Subject</th>
+                <th>Verb "To Be"</th>
+                <th>Example</th>
+            </tr>
+            <tr>
+                <td>I</td>
+                <td>am</td>
+                <td>I am happy.</td>
+            </tr>
+            <tr>
+                <td>You</td>
+                <td>are</td>
+                <td>You are strong.</td>
+            </tr>
+            <tr>
+                <td>He/She/It</td>
+                <td>is</td>
+                <td>He is brave.</td>
+            </tr>
+            <tr>
+                <td>We</td>
+                <td>are</td>
+                <td>We are safe.</td>
+            </tr>
+            <tr>
+                <td>You (plural)</td>
+                <td>are</td>
+                <td>You are a family.</td>
+            </tr>
+            <tr>
+                <td>They</td>
+                <td>are</td>
+                <td>They are animals.</td>
+            </tr>
+        </table>
     </div>
 
     <div class="section">
-        <h2>A</h2>
-        <p>Look at these sentences from the story of Noah's Ark:</p>
+        <h2>2. Examples from the Story of Noah</h2>
+        <p>Let's see how the verb "to be" is used in the story of Noah.</p>
         <ul>
             <li>I am Noah.</li>
             <li>God is good.</li>
             <li>The ark is big.</li>
             <li>We are safe in the ark.</li>
             <li>The animals are happy.</li>
+            <li>You are strong, Noah.</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>B</h2>
-        <p>The verb "to be" is used to describe who or what something is, or to describe a state or condition.</p>
-        <p><strong>am</strong> = I</p>
-        <p><strong>is</strong> = he, she, it</p>
-        <p><strong>are</strong> = you, we, they</p>
-        <ul>
-            <li>I am happy. (I)</li>
-            <li>He is strong. (he)</li>
-            <li>They are animals. (they)</li>
-        </ul>
+        <h2>3. Exercises</h2>
+        <h3>A. Fill in the blanks with "am," "is," or "are":</h3>
+        <p>Noah ___ building the ark.</p>
+        <p>The animals ___ inside the ark.</p>
+        <p>I ___ happy to help Noah.</p>
+        <p>The sky ___ clear after the flood.</p>
+        <p>We ___ thankful to God.</p>
+
+        <h3>B. Choose the correct word to complete the sentence:</h3>
+        <p>God ___ (is/are) powerful.</p>
+        <p>The rainbow ___ (is/am) a promise from God.</p>
+        <p>Noah's family ___ (am/are) safe in the ark.</p>
+        <p>The dove ___ (is/are) bringing a message.</p>
+        <p>I ___ (am/are) happy to see the rainbow.</p>
+
+        <h3>C. Write a sentence using "to be" based on the story:</h3>
+        <p>______________ (Hint: Think about how Noah felt when he saw the rainbow.)</p>
+
+        <h3>D. Correct the sentences below (if necessary):</h3>
+        <p>Noah are building the ark.</p>
+        <p>The animals is safe in the ark.</p>
+        <p>I is happy to help.</p>
+        <p>The ark am strong.</p>
+        <p>They is a family.</p>
     </div>
 
     <div class="section">
-        <h2>C</h2>
-        <p>Now complete these sentences from the story:</p>
-        <p>1. Noah ___ building the ark. (is)</p>
-        <p>2. The animals ___ inside the ark. (are)</p>
-        <p>3. I ___ happy to help Noah. (am)</p>
-        <p>4. The ark ___ strong. (is)</p>
-        <p>5. They ___ a family. (are)</p>
+        <h2>4. Answer Key</h2>
+        <h3>A. Fill in the blanks with "am," "is," or "are":</h3>
+        <p>Noah is building the ark.</p>
+        <p>The animals are inside the ark.</p>
+        <p>I am happy to help Noah.</p>
+        <p>The sky is clear after the flood.</p>
+        <p>We are thankful to God.</p>
+
+        <h3>B. Choose the correct word to complete the sentence:</h3>
+        <p>God is powerful.</p>
+        <p>The rainbow is a promise from God.</p>
+        <p>Noah's family are safe in the ark.</p>
+        <p>The dove is bringing a message.</p>
+        <p>I am happy to see the rainbow.</p>
+
+        <h3>C. Write a sentence using "to be" based on the story:</h3>
+        <p>Free answer: (Example: "I am happy to see the animals safe.")</p>
+
+        <h3>D. Correct the sentences below (if necessary):</h3>
+        <p>Noah is building the ark.</p>
+        <p>The animals are safe in the ark.</p>
+        <p>I am happy to help.</p>
+        <p>The ark is strong.</p>
+        <p>They are a family.</p>
     </div>
 
     <div class="section">
-        <h2>D</h2>
-        <p>Write the correct form of the verb "to be":</p>
-        <p>1. God ___ good.</p>
-        <p>2. The ark ___ big.</p>
-        <p>3. We ___ safe.</p>
-        <p>4. You ___ strong.</p>
-        <p>5. They ___ happy.</p>
-    </div>
-
-    <div class="section">
-        <h2>E</h2>
-        <p>Questions and Answers:</p>
-        <p>1. Who is building the ark?</p>
-        <p>- Noah is building the ark.</p>
-        <p>2. How many animals are in the ark?</p>
-        <p>- Two of each kind are in the ark.</p>
-        <p>3. What is God?</p>
-        <p>- God is good.</p>
-    </div>
-
-    <div class="section">
-        <h2>F</h2>
-        <p>Now you. Write sentences using "am," "is," or "are":</p>
-        <input type="text" placeholder="1. ________________________________________________________" readonly>
-        <input type="text" placeholder="2. ________________________________________________________" readonly>
-        <input type="text" placeholder="3. ________________________________________________________" readonly>
+        <h2>5. Conclusion</h2>
+        <p>These exercises help children practice the verb "to be" while learning about the story of Noah. This study combines grammar with storytelling, making learning more engaging and meaningful.</p>
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
