--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -36,12 +36,21 @@
             padding: 15px;
             border-radius: 5px;
         }
-        .line {
-            display: block;
+        table {
             width: 100%;
-            height: 1.5em;
-            border-bottom: 2px solid black;
-            margin-bottom: 15px;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #ff6600;
+            color: white;
         }
         .btn-download {
             display: block;
@@ -179,7 +188,7 @@
 <div class="container">
     <h1>The Verb "To Be" - Study with Noah's Ark</h1>
     
-    <img src="foto4.png" alt="Noah's Ark" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
+    <img src="ark_image.png" alt="Noah's Ark" style="width: 100%; border-radius: 8px; margin-bottom: 20px;">
 
     <div class="section">
         <h2>1. Introduction to the Verb "To Be"</h2>
