--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -163,7 +163,7 @@
             doc.text('I am happy to see the rainbow.', 20, 135);
 
             doc.text('C. Write a sentence using "to be" based on the story:', 20, 145);
-            doc.text('Free answer: _____________________________________ (Example: "I am happy to see the animals safe.")', 20, 150);
+            doc.text('Free answer: ______________________________ (Example: "I am happy to see the animals safe.")', 20, 150);
 
             doc.text('D. Correct the sentences below (if necessary):', 20, 160);
             doc.text('Noah is building the ark.', 20, 165);
@@ -272,11 +272,11 @@
     <div class="section">
         <h2>4. Answer Key</h2>
         <h3>A. Fill in the blanks with "am," "is," or "are":</h3>
-        <p>Noah is building the ark.</p>
-        <p>The animals are inside the ark.</p>
-        <p>I am happy to help Noah.</p>
-        <p>The sky is clear after the flood.</p>
-        <p>We are thankful to God.</p>
+        <p>Noah ____ building the ark.</p>
+        <p>The animals ____ inside the ark.</p>
+        <p>I ____ happy to help Noah.</p>
+        <p>The sky ____ clear after the flood.</p>
+        <p>We ____ thankful to God.</p>
 
         <h3>B. Choose the correct word to complete the sentence:</h3>
         <p>God is powerful.</p>
@@ -286,7 +286,7 @@
         <p>I am happy to see the rainbow.</p>
 
         <h3>C. Write a sentence using "to be" based on the story:</h3>
-        <p>Free answer: (Example: "I am happy to see the animals safe.")</p>
+        <p>Free answer: _______________________(Example: "I am happy to see the animals safe.")</p>
 
         <h3>D. Correct the sentences below (if necessary):</h3>
         <p>Noah is building the ark.</p>
