--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Definite and Indefinite Articles - The Creation Story</title>
+    <title>Indefinite Articles - The Creation Story</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -107,15 +107,14 @@
 <body>
 
 <div class="container">
-    <h1>Definite and Indefinite Articles - The Creation Story</h1>
+    <h1>Indefinite Articles - The Creation Story</h1>
     
     <div class="image-container">
         <img src="an_vs_a_creation_example.jpeg" alt="Example of 'a' and 'an' using Creation Story">
     </div>
 
     <div class="section">
-        <h2>Grammar: Definite and Indefinite Articles</h2>
-        <p><strong>1. Indefinite Articles: "a" and "an"</strong></p>
+        <h2>1. Indefinite Articles: "a" and "an"</h2>
         <p><strong>Usage:</strong></p>
         <ul>
             <li>Use "a" and "an" when talking about something for the first time or something that is not specific.</li>
@@ -132,91 +131,83 @@
     </div>
 
     <div class="section">
-        <h2>2. Definite Article: "the"</h2>
-        <p><strong>Usage:</strong></p>
+        <h2>2. Exercises</h2>
+        <p><strong>Exercise 1: Fill in the blanks with "a" or "an"</strong></p>
         <ul>
-            <li>Use "the" when talking about something specific, something that has already been mentioned, or something unique.</li>
-            <li>"The" can be used before any noun, singular or plural, with a vowel or consonant sound.</li>
-        </ul>
-        <p><strong>Examples from the Creation Story:</strong></p>
-        <ul>
-            <li>"God separated <strong>the</strong> light from <strong>the</strong> darkness." (Specific light and darkness are mentioned.)</li>
-            <li>"<strong>The</strong> earth was empty and dark." (There is only one Earth, so it is specific.)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Exercises</h2>
-        <p><strong>Exercise 1: Fill in the blanks with "a," "an," or "the"</strong></p>
-        <ul>
-            <li>In the beginning, God created ___ heavens and ___ earth.</li>
-            <li>There was ___ darkness over ___ surface of ___ deep.</li>
-            <li>God said, "Let there be ___ light." And there was ___ light.</li>
-            <li>He created ___ moon to rule ___ night and ___ sun to rule ___ day.</li>
-            <li>God saw all ___ things He had made, and they were very good.</li>
+            <li>In the beginning, God created ___ sky.</li>
+            <li>There was ___ darkness over the surface of the deep.</li>
+            <li>God said, "Let there be ___ light."</li>
+            <li>He created ___ moon to rule the night.</li>
+            <li>God created ___ man and ___ woman.</li>
         </ul>
 
         <p><strong>Exercise 2: Choose the correct article</strong></p>
         <ul>
-            <li>God created ___ tree in the Garden. (a/an/the)</li>
-            <li>___ sky above was clear and blue. (a/an/the)</li>
-            <li>There is ___ animal on the land. (a/an/the)</li>
-            <li>___ stars were placed in the sky. (a/an/the)</li>
-            <li>Let there be ___ water gathered in one place. (a/an/the)</li>
+            <li>God created ___ tree in the Garden. (a/an)</li>
+            <li>There is ___ animal on the land. (a/an)</li>
+            <li>He saw ___ apple on the tree. (a/an)</li>
+            <li>God created ___ elephant. (a/an)</li>
         </ul>
 
         <p><strong>Exercise 3: Complete the sentences</strong></p>
         <ul>
-            <li>God created ___ (animal) to live on the land. ___ (animal) is very strong.</li>
+            <li>God created ___ (animal) to live on the land.</li>
             <li>There is ___ (fruit) tree in the Garden.</li>
-            <li>___ (light) was called "day," and ___ (darkness) was called "night."</li>
-            <li>He made ___ (sun) to shine by day and ___ (moon) to glow by night.</li>
+            <li>He made ___ (light) to shine during the day.</li>
             <li>Finally, God created ___ (man) and ___ (woman).</li>
         </ul>
 
         <p><strong>Additional Practice:</strong></p>
-        <p>Encourage students to create their own sentences using "a," "an," and "the" to describe things they see in the classroom or around them. This will help reinforce the rules and improve their understanding of how to use articles in context.</p>
+        <p>Encourage students to create their own sentences using "a" and "an" to describe things they see in the classroom or around them. This will help reinforce the rules and improve their understanding of how to use articles in context.</p>
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script>
-function generatePDF() {
-    var doc = new jsPDF();
-    doc.text(20, 20, 'Definite and Indefinite Articles - The Creation Story');
-    doc.addImage('an_vs_a_creation_example.jpeg', 'JPEG', 15, 40, 180, 160);
-    doc.text(20, 210, 'Grammar: Definite and Indefinite Articles');
-    doc.text(20, 230, '1. Indefinite Articles: "a" and "an"');
-    doc.text(20, 240, 'Usage:');
-    doc.text(20, 250, 'Use "a" and "an" when talking about something for the first time or something that is not specific.');
-    doc.text(20, 260, '"A" is used before words that start with a consonant sound.');
-    doc.text(20, 270, '"An" is used before words that start with a vowel sound.');
-    doc.text(20, 290, 'Examples:');
-    doc.text(20, 300, 'God made a sky above the earth. (The sky is mentioned for the first time.)');
-    doc.text(20, 310, 'He created a lion. (Any lion, not a specific one.)');
-    doc.text(20, 320, 'There is an apple tree in the Garden. (The apple tree is mentioned for the first time.)');
-    doc.text(20, 330, 'God created an elephant. (Any elephant, not a specific one.)');
-    doc.text(20, 350, '2. Definite Article: "the"');
-    doc.text(20, 360, 'Usage:');
-    doc.text(20, 370, 'Use "the" when talking about something specific, something that has already been mentioned, or something unique.');
-    doc.text(20, 380, 'Examples:');
-    doc.text(20, 390, 'God separated the light from the darkness. (Specific light and darkness are mentioned.)');
-    doc.text(20, 400, 'The earth was empty and dark. (There is only one Earth, so it is specific.)');
-    doc.text(20, 420, 'Exercises:');
-    doc.text(20, 430, '1. In the beginning, God created ___ heavens and ___ earth.');
-    doc.text(20, 440, '2. There was ___ darkness over ___ surface of ___ deep.');
-    doc.text(20, 450, '3. God said, "Let there be ___ light." And there was ___ light.');
-    doc.text(20, 460, '4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.');
-    doc.text(20, 470, '5. God saw all ___ things He had made, and they were very good.');
-    doc.text(20, 490, '2. Choose the correct article:');
-    doc.text(20, 500, '1. God created ___ tree in the Garden. (a/an/the)');
-    doc.text(20, 510, '2. ___ sky above was clear and blue. (a/an/the)');
-    doc.text(20, 520, '3. There is ___ animal on the land. (a/an/the)');
-    doc.text(20, 530, '4. ___ stars were placed in the sky. (a/an/the)');
-    doc.text(20, 540, '5. Let there be ___ water gathered in one place. (a/an/the)');
-    doc.save('grammar_lesson_creation.pdf');
-}
+    function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        doc.setFontSize(16);
+        doc.text("Indefinite Articles - The Creation Story", 20, 20);
+
+        doc.setFontSize(12);
+        doc.text("1. Indefinite Articles: 'a' and 'an'", 20, 40);
+        doc.text("Usage:", 20, 50);
+        doc.text("Use 'a' and 'an' when talking about something for the first time or something that is not specific.", 20, 60);
+        doc.text("'A' is used before words that start with a consonant sound.", 20, 70);
+        doc.text("'An' is used before words that start with a vowel sound.", 20, 80);
+
+        doc.text("Examples from the Creation Story:", 20, 90);
+        doc.text("God made a sky above the earth.", 20, 100);
+        doc.text("He created a lion.", 20, 110);
+        doc.text("There is an apple tree in the Garden.", 20, 120);
+        doc.text("God created an elephant.", 20, 130);
+
+        doc.text("2. Exercises", 20, 150);
+        doc.text("Exercise 1: Fill in the blanks with 'a' or 'an'", 20, 160);
+        doc.text("1. In the beginning, God created ___ sky.", 20, 170);
+        doc.text("2. There was ___ darkness over the surface of the deep.", 20, 180);
+        doc.text("3. God said, 'Let there be ___ light.'", 20, 190);
+        doc.text("4. He created ___ moon to rule the night.", 20, 200);
+        doc.text("5. God created ___ man and ___ woman.", 20, 210);
+
+        doc.text("Exercise 2: Choose the correct article", 20, 230);
+        doc.text("1. God created ___ tree in the Garden. (a/an)", 20, 240);
+        doc.text("2. There is ___ animal on the land. (a/an)", 20, 250);
+        doc.text("3. He saw ___ apple on the tree. (a/an)", 20, 260);
+        doc.text("4. God created ___ elephant. (a/an)", 20, 270);
+
+        doc.text("Exercise 3: Complete the sentences", 20, 290);
+        doc.text("1. God created ___ (animal) to live on the land.", 20, 300);
+        doc.text("2. There is ___ (fruit) tree in the Garden.", 20, 310);
+        doc.text("3. He made ___ (light) to shine during the day.", 20, 320);
+        doc.text("4. Finally, God created ___ (man) and ___ (woman).", 20, 330);
+
+        doc.save("grammar_lesson_creation.pdf");
+    }
 </script>
 
 </body>
