--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -151,10 +151,10 @@
 
         <p><strong>Exercise 3: Complete the sentences</strong></p>
         <ul>
-            <li>God created ___ (animal) to live on the land.</li>
-            <li>There is ___ (fruit) tree in the Garden.</li>
-            <li>He made ___ (light) to shine during the day.</li>
-            <li>Finally, God created ___ (man) and ___ (woman).</li>
+            <li>God created ___ lion to live on the land.</li>
+            <li>There is ___ apple tree in the Garden.</li>
+            <li>He made ___ light to shine during the day.</li>
+            <li>God created ___ elephant to roam the earth.</li>
         </ul>
 
         <p><strong>Additional Practice:</strong></p>
@@ -165,7 +165,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script>
     function generatePDF() {
         const { jsPDF } = window.jspdf;
@@ -175,16 +174,17 @@
         let y = 20;
 
         // Logo and Title
-        doc.addImage('Logo.png', 'PNG', 75, y, 60, 60);
-        y += 70;
+        doc.addImage('Logo.png', 'PNG', 90, y, 30, 30);  // Logo reduzida
+        y += 40;
+        doc.setFontSize(12);
+        doc.text("Name: ____________________________  Date: _______________", 20, y);
+        y += 20;
+
         doc.setFontSize(16);
         doc.text("Indefinite Articles - The Creation Story", 20, y);
         y += 20;
 
         doc.setFontSize(12);
-        doc.text("Name: ____________________________  Date: _______________", 20, y);
-        y += 20;
-
         doc.text("1. Indefinite Articles: 'a' and 'an'", 20, y);
         y += 10;
         doc.text("Usage:", 20, y);
@@ -244,13 +244,13 @@
         }
         doc.text("Exercise 3: Complete the sentences", 20, y);
         y += 10;
-        doc.text("1. God created ___ (animal) to live on the land.", 20, y);
+        doc.text("1. God created ___ lion to live on the land.", 20, y);
         y += 10;
-        doc.text("2. There is ___ (fruit) tree in the Garden.", 20, y);
+        doc.text("2. There is ___ apple tree in the Garden.", 20, y);
         y += 10;
-        doc.text("3. He made ___ (light) to shine during the day.", 20, y);
+        doc.text("3. He made ___ light to shine during the day.", 20, y);
         y += 10;
-        doc.text("4. Finally, God created ___ (man) and ___ (woman).", 20, y);
+        doc.text("4. God created ___ elephant to roam the earth.", 20, y);
 
         doc.save("grammar_lesson_creation.pdf");
     }
