dinamicidade no grammar

--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -5,160 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indefinite Articles - The Creation Story</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-            font-size: 2rem;
-        }
-        h2 {
-            background-color: #28a745;
-            color: white;
-            padding: 10px;
-            border-radius: 4px;
-            font-size: 1.5rem;
-            text-align: center;
-        }
-        .section {
-            background-color: #d4edda;
-            margin-bottom: 20px;
-            padding: 20px;
-            border-radius: 5px;
-        }
-        .section p {
-            margin: 0;
-            padding: 10px 0;
-            font-size: 1.2rem;
-        }
-        .section ul {
-            padding-left: 20px;
-        }
-        .section ul li {
-            margin: 5px 0;
-        }
-        .btn-download {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            background-color: #218838;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            cursor: pointer;
-            font-size: 1.2rem;
-        }
-        .btn-download:hover {
-            background-color: #1e7e34;
-        }
-        .image-container {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-            h2 {
-                font-size: 1.25rem;
-            }
-        }
-        @media (max-width: 480px) {
-            .container {
-                padding: 10px;
-            }
-            h1 {
-                font-size: 1.25rem;
-            }
-            h2 {
-                font-size: 1.1rem;
-            }
-            .btn-download {
-                font-size: 1rem;
-                padding: 12px;
-            }
-        }
+        /* [Same style as before] */
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Indefinite Articles - The Creation Story</h1>
+    <a href="javascript:history.back()" class="back-button">Back</a>
+    <h1 id="title">Loading title...</h1>
     
-    <div class="image-container">
-        <img src="an_vs_a_creation_example.jpeg" alt="Example of 'a' and 'an' using Creation Story">
-    </div>
-
-    <div class="section">
-        <h2>1. Indefinite Articles: "a" and "an"</h2>
-        <p><strong>Usage:</strong></p>
-        <ul>
-            <li>Use "a" and "an" when talking about something for the first time or something that is not specific.</li>
-            <li>"A" is used before words that start with a consonant sound.</li>
-            <li>"An" is used before words that start with a vowel sound.</li>
-        </ul>
-        <p><strong>Examples from the Creation Story:</strong></p>
-        <ul>
-            <li>"God made <strong>a</strong> sky above the earth." (The sky is mentioned for the first time, and it is not specific.)</li>
-            <li>"He created <strong>a</strong> lion." (Any lion, not a specific one.)</li>
-            <li>"There is <strong>an</strong> apple tree in the Garden." (The apple tree is mentioned for the first time.)</li>
-            <li>"God created <strong>an</strong> elephant." (Any elephant, not a specific one.)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>2. Exercises</h2>
-        <p><strong>Exercise 1: Fill in the blanks with "a" or "an"</strong></p>
-        <ul>
-            <li>In the beginning, God created ___ sky.</li>
-            <li>There was ___ darkness over the surface of the deep.</li>
-            <li>God said, "Let there be ___ light."</li>
-            <li>He created ___ moon to rule the night.</li>
-            <li>God created ___ man and ___ woman.</li>
-        </ul>
-
-        <p><strong>Exercise 2: Choose the correct article</strong></p>
-        <ul>
-            <li>God created ___ tree in the Garden. (a/an)</li>
-            <li>There is ___ animal on the land. (a/an)</li>
-            <li>He saw ___ apple on the tree. (a/an)</li>
-            <li>God created ___ elephant. (a/an)</li>
-        </ul>
-
-        <p><strong>Exercise 3: Complete the sentences</strong></p>
-        <ul>
-            <li>God created ___ lion to live on the land.</li>
-            <li>There is ___ apple tree in the Garden.</li>
-            <li>He made ___ light to shine during the day.</li>
-            <li>God created ___ elephant to roam the earth.</li>
-        </ul>
-
-        <p><strong>Additional Practice:</strong></p>
-        <p>Encourage students to create their own sentences using "a" and "an" to describe things they see in the classroom or around them. This will help reinforce the rules and improve their understanding of how to use articles in context.</p>
+    <div id="content">
+        <!-- Dynamic content will be loaded here -->
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
@@ -166,94 +23,104 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script>
-    function generatePDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
+    function loadTextFile() {
+        fetch('texto.txt')
+            .then(response => response.text())
+            .then(data => {
+                const contentDiv = document.getElementById('content');
+                const lines = data.split('\n');
+                let currentSection = '';
+                let htmlContent = '';
+                
+                lines.forEach(line => {
+                    if (line.startsWith('Title: ')) {
+                        document.getElementById('title').innerText = line.replace('Title: ', '');
+                    } else if (line.startsWith('# ')) {
+                        if (currentSection) {
+                            htmlContent += '</div>';
+                        }
+                        currentSection = line.replace('# ', '');
+                        htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
+                    } else if (line.startsWith('Subtitle: ')) {
+                        htmlContent += `<h2>${line.replace('Subtitle: ', '')}</h2>`;
+                    } else if (line.startsWith('Text: ')) {
+                        htmlContent += `<p>${line.replace('Text: ', '')}</p>`;
+                    } else if (line.startsWith('Examples from the Creation Story:')) {
+                        htmlContent += `<p><strong>${line}</strong></p><ul>`;
+                    } else if (line.startsWith('"')) {
+                        htmlContent += `<li>${line}</li>`;
+                    } else {
+                        htmlContent += `<p>${line}</p>`;
+                    }
+                });
 
-        const pageHeight = doc.internal.pageSize.height;
-        let y = 20;
-
-        // Logo and Title
-        doc.addImage('Logo.png', 'PNG', 90, y, 30, 30);  // Logo reduzida
-        y += 40;
-        doc.setFontSize(12);
-        doc.text("Name: ____________________________  Date: _______________", 20, y);
-        y += 20;
-
-        doc.setFontSize(16);
-        doc.text("Indefinite Articles - The Creation Story", 20, y);
-        y += 20;
-
-        doc.setFontSize(12);
-        doc.text("1. Indefinite Articles: 'a' and 'an'", 20, y);
-        y += 10;
-        doc.text("Usage:", 20, y);
-        y += 10;
-        doc.text("Use 'a' and 'an' when talking about something for the first time or something that is not specific.", 20, y);
-        y += 10;
-        doc.text("'A' is used before words that start with a consonant sound.", 20, y);
-        y += 10;
-        doc.text("'An' is used before words that start with a vowel sound.", 20, y);
-
-        y += 10;
-        doc.text("Examples from the Creation Story:", 20, y);
-        y += 10;
-        doc.text("God made a sky above the earth.", 20, y);
-        y += 10;
-        doc.text("He created a lion.", 20, y);
-        y += 10;
-        doc.text("There is an apple tree in the Garden.", 20, y);
-        y += 10;
-        doc.text("God created an elephant.", 20, y);
-
-        y += 20;
-        doc.text("2. Exercises", 20, y);
-        y += 10;
-
-        doc.text("Exercise 1: Fill in the blanks with 'a' or 'an'", 20, y);
-        y += 10;
-        doc.text("1. In the beginning, God created ___ sky.", 20, y);
-        y += 10;
-        doc.text("2. There was ___ darkness over the surface of the deep.", 20, y);
-        y += 10;
-        doc.text("3. God said, 'Let there be ___ light.'", 20, y);
-        y += 10;
-        doc.text("4. He created ___ moon to rule the night.", 20, y);
-        y += 10;
-        doc.text("5. God created ___ man and ___ woman.", 20, y);
-
-        y += 20;
-        if (y > pageHeight - 20) {
-            doc.addPage();
-            y = 20;
-        }
-        doc.text("Exercise 2: Choose the correct article", 20, y);
-        y += 10;
-        doc.text("1. God created ___ tree in the Garden. (a/an)", 20, y);
-        y += 10;
-        doc.text("2. There is ___ animal on the land. (a/an)", 20, y);
-        y += 10;
-        doc.text("3. He saw ___ apple on the tree. (a/an)", 20, y);
-        y += 10;
-        doc.text("4. God created ___ elephant. (a/an)", 20, y);
-
-        y += 20;
-        if (y > pageHeight - 20) {
-            doc.addPage();
-            y = 20;
-        }
-        doc.text("Exercise 3: Complete the sentences", 20, y);
-        y += 10;
-        doc.text("1. God created ___ lion to live on the land.", 20, y);
-        y += 10;
-        doc.text("2. There is ___ apple tree in the Garden.", 20, y);
-        y += 10;
-        doc.text("3. He made ___ light to shine during the day.", 20, y);
-        y += 10;
-        doc.text("4. God created ___ elephant to roam the earth.", 20, y);
-
-        doc.save("grammar_lesson_creation.pdf");
+                contentDiv.innerHTML = htmlContent + '</div>';
+            })
+            .catch(error => console.error('Error loading the text file:', error));
     }
+
+    function generatePDF() {
+        fetch('texto.txt')
+            .then(response => response.text())
+            .then(data => {
+                const { jsPDF } = window.jspdf;
+                const doc = new jsPDF();
+                const lines = data.split('\n');
+                let y = 20;
+
+                doc.addImage('Logo.png', 'PNG', 90, y, 30, 30); // Logo reduzida
+                y += 40;
+                doc.setFontSize(12);
+                doc.text("Name: ____________________________  Date: _______________", 20, y);
+                y += 20;
+
+                lines.forEach(line => {
+                    if (line.startsWith('Title: ')) {
+                        doc.setFontSize(16);
+                        doc.text(line.replace('Title: ', ''), 20, y);
+                        y += 20;
+                    } else if (line.startsWith('# ')) {
+                        if (y > doc.internal.pageSize.height - 20) {
+                            doc.addPage();
+                            y = 20;
+                        }
+                        doc.setFontSize(14);
+                        doc.text(line.replace('# ', ''), 20, y);
+                        y += 10;
+                    } else if (line.startsWith('Subtitle: ')) {
+                        doc.setFontSize(14);
+                        doc.text(line.replace('Subtitle: ', ''), 20, y);
+                        y += 10;
+                    } else if (line.startsWith('Text: ')) {
+                        doc.setFontSize(12);
+                        doc.text(line.replace('Text: ', ''), 20, y);
+                        y += 10;
+                    } else if (line.startsWith('Examples from the Creation Story:')) {
+                        doc.setFontSize(12);
+                        doc.text(line, 20, y);
+                        y += 10;
+                    } else if (line.startsWith('"')) {
+                        doc.setFontSize(12);
+                        doc.text(line, 25, y);
+                        y += 10;
+                    } else {
+                        doc.setFontSize(12);
+                        doc.text(line, 20, y);
+                        y += 10;
+                    }
+
+                    if (y > doc.internal.pageSize.height - 20) {
+                        doc.addPage();
+                        y = 20;
+                    }
+                });
+
+                doc.save("grammar_lesson_creation.pdf");
+            })
+            .catch(error => console.error('Error generating the PDF:', error));
+    }
+
+    document.addEventListener('DOMContentLoaded', loadTextFile);
 </script>
 
 </body>
