--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -137,6 +137,10 @@
     <a href="javascript:history.back()" class="back-button">Back</a>
     <h1 id="title">Loading title...</h1>
     
+    <div class="image-container">
+        <img id="main-image" src="image.jpeg" alt="Example Image">
+    </div>
+
     <div id="content">
         <!-- Dynamic content will be loaded here -->
     </div>
